--- a/hw2/css/index.css
+++ b/hw2/css/index.css
@@ -31,6 +31,10 @@ a {
   color: #fff;
 }
 
+.text-64px {
+  font-size: 64px;
+}
+
 .btn {
   padding: 12px 24px;
   border-radius: 32px;
@@ -70,7 +74,7 @@ a {
   width: 526px;
 }
 
-.h2-mb-36px {
+.mb-36px {
   margin-bottom: 36px;
 }
 
@@ -80,4 +84,37 @@ a {
 
 .introduction-img-group {
   width: 746px;
+}
+
+.about-me-pt {
+  padding-top: 160px;
+}
+
+.ability-group {
+  width: 636px;
+}
+
+.ability-group li {
+  width: 306px;
+}
+
+.ability-number {
+  font-size: 20px;
+  color: #15161D;
+}
+
+.ability-number h3 {
+  font-size: 20px;
+}
+
+.about-me-depiction {
+  width: 526px;
+}
+
+.about-me-depiction p {
+  color: #15161D;
+}
+
+.bg-contact-me{
+  background: linear-gradient(180deg, #050014 0%, #01021ee3 100%);
 }
