--- a/hw2/css/index.css
+++ b/hw2/css/index.css
@@ -27,6 +27,10 @@ a {
   color: #D1D1D1;
 }
 
+.text-15161d {
+  color: #15161D;
+}
+
 .text-fff {
   color: #fff;
 }
@@ -62,7 +66,7 @@ a {
 }
 
 .bg-set-introduction {
-  padding-top: 160px;
+  padding: 160px 0;
   background-image: url('../image/background-img.png');
   background-position: center;
   background-size: cover;
@@ -78,6 +82,18 @@ a {
   margin-bottom: 36px;
 }
 
+.mx-20px {
+  margin: 0 20px;
+}
+
+.me-24px {
+  margin-right: 24px;
+}
+
+.mb-28px {
+  margin-bottom: 28px;
+}
+
 .intro {
   padding-bottom: 32px;
 }
@@ -87,7 +103,7 @@ a {
 }
 
 .about-me-pt {
-  padding-top: 160px;
+  padding: 160px 0;
 }
 
 .ability-group {
@@ -115,6 +131,39 @@ a {
   color: #15161D;
 }
 
-.bg-contact-me{
+.bg-contact-me {
+  padding: 96px 0;
   background: linear-gradient(180deg, #050014 0%, #01021ee3 100%);
+}
+
+.my-projects {
+  padding: 160px 0;
+}
+
+.h2-width-746px {
+  width: 746px;
+}
+
+.projects-width-856px {
+  width: 856px;
+}
+
+.projects-image-196px {
+  width: 196px;
+}
+
+.projects-image-416px {
+  width: 416px;
+}
+
+.projects-image-306px {
+  width: 306px;
+}
+
+.projects-image-526px {
+  width: 526px;
+}
+
+.footer-py-40px {
+  padding: 40px 0;
 }
