--- a/hw3/css/index.css
+++ b/hw3/css/index.css
@@ -14,6 +14,11 @@
   font-style: normal;
 }
 
+.roboto-black-italic {
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
 /* 字型結束 */
 
 *,
@@ -41,8 +46,16 @@ img {
   font-size: 20px;
 }
 
+.fs-24px {
+  font-size: 24px;
+}
+
 .fs-36px {
   font-size: 36px;
+}
+
+.fs-48px {
+  font-size: 48px;
 }
 
 .fs-64px {
@@ -54,6 +67,22 @@ img {
   margin-left: 64px;
 }
 
+.mb-8px {
+  margin-bottom: 8px;
+}
+
+.mb-16px {
+  margin-bottom: 16px;
+}
+
+.mb-24px {
+  margin-bottom: 24px;
+}
+
+.mb-48px {
+  margin-bottom: 48px;
+}
+
 /* 字體顏色 */
 .color-fff {
   color: #fff;
@@ -62,11 +91,24 @@ img {
 .color-650300 {
   color: #650300;
 }
+.color-aa0601{
+  color: #AA0601;
+}
+/* 物件大小 */
+.w-100px {
+  width: 100px;
+}
 
-.nav-bg,
-.buy-now {
+/* 背景顏色 */
+.bg-aa0601 {
   background-color: #AA0601;
 }
+
+.bg-fbf2f2 {
+  background-color: #FBF2F2;
+}
+
+/* -------------------- */
 
 .navbar {
   padding: 25px 0;
@@ -83,4 +125,8 @@ img {
 
 .buy-now {
   padding: 6px 12px;
+}
+
+.section-py-80px {
+  padding: 80px 0;
 }
