--- a/hw3/css/index.css
+++ b/hw3/css/index.css
@@ -200,9 +200,19 @@ textarea {
   background: url('../image/index-bg.png') no-repeat center / cover;
 }
 
+.section3-lg {
+  width: 50%;
+}
+
 .double-a,
 .youth {
   padding: 8px 0;
+}
+
+.section4-shadow {
+  box-shadow: 0px 2px 6px #00000029;
+  border: 1px solid #DEE2E6;
+  border-radius: 4px;
 }
 
 .min-h-72px {
@@ -219,4 +229,30 @@ textarea {
 
 .footer-py {
   padding: 48px 0 32px 0;
+}
+
+.footer-icon-mx {
+  margin: 0 32px;
+}
+
+@media (max-width: 992px) {
+  .section1-header {
+    font-size: 48px;
+  }
+
+  .card {
+    margin-bottom: 24px;
+  }
+
+  .section-index-bg {
+    background: url('../image/index-bg-md.png') no-repeat center / cover;
+  }
+
+  .section3-lg {
+    width: 100%;
+  }
+
+  .footer-icon-mx{
+    margin: 0 16px;
+  }
 }
