--- a/hw3/css/index.css
+++ b/hw3/css/index.css
@@ -252,7 +252,50 @@ textarea {
     width: 100%;
   }
 
-  .footer-icon-mx{
+  .footer-icon-mx {
     margin: 0 16px;
+  }
+}
+
+@media (max-width: 768px) {
+  .container-768 {
+    max-width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+
+  .logo-padding {
+    padding: 12px 0 12px 15px;
+    align-self: self-start;
+  }
+
+  .nav-container {
+    padding-top: 12px;
+    padding-left: 15px;
+  }
+
+  .navbar {
+    padding: 0;
+  }
+
+  .logo {
+    width: 80px;
+    align-self: flex-start;
+  }
+
+  .nav-list {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .nav-item {
+    width: 50%;
+    text-align: center;
+    margin-left: 0;
+    padding: 12px 0;
+    border: 1px solid #FFFFFF
+  }
+  .header-bg {
+    background: url('../image/home-header-sm.png') no-repeat center / cover;
   }
 }
