--- a/hw4_vite/web-layout-training-vite-main/layout/header.ejs
+++ b/hw4_vite/web-layout-training-vite-main/layout/header.ejs
@@ -1,4 +1,13 @@
-<h1 class="header">我是 header</h1>
-<a href="index.html">index</a>
-<a href="about.html">about</a>
-<a href="contact.html">contact</a>
+<nav class="bg-aa0601 navbar">
+  <div class="container-768 container d-flex justify-content-between align-items-center flex-md-row flex-column">
+    <div class="logo-padding">
+      <img class="logo" src="../image/logo-white.png" alt="網站圖示">
+    </div>
+    <ul class="nav-list p-0 mb-0 d-flex align-items-center color-fff m-0">
+      <li class="nav-item fs-20px">系列鏡框</li>
+      <li class="nav-item ms-64px fs-20px">門市據點</li>
+      <li class="nav-item ms-64px fs-20px">部落格</li>
+      <li class="nav-item ms-64px fs-20px">常見問題</li>
+    </ul>
+  </div>
+</nav>
