--- a/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
@@ -1,5 +1,2 @@
-@import './layout/header.scss';
-@import './layout/footer.scss';
-
-
-@import './pages/index.scss';
+@import '../base/_reset.scss';
+@import './layout/_header.scss';
