--- a/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
+++ b/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
@@ -11,13 +11,13 @@
         </ul>
         <div>
           <div class="mb-8px d-flex align-items-center">
-            <span class="fs-48px me-16px material-symbols-outlined color-fff fs-16-768px">
+            <span class="fs-48px me-16px material-symbols-outlined color-fff">
               call
             </span>
             <a href="tel:0988888888" class="color-fff fs-36px fs-16-768px">0800-000-000</a>
           </div>
           <div class="d-flex align-items-center">
-            <span class="fs-48px me-16px material-symbols-outlined color-fff fs-16-768px">
+            <span class="fs-48px me-16px material-symbols-outlined color-fff">
               mail
             </span>
             <a href="mailto:glasses@business.com" class="color-fff fs-36px fs-16-768px">glasses@business.com</a>
