--- a/hw4_vite/web-layout-training-vite-main/assets/scss/layout/_footer.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/layout/_footer.scss
@@ -39,7 +39,7 @@
   border: 1px solid #fff;
 }
 
-// /* 字體顏色 */
+/* 字體顏色 */
 .color-fff {
   color: #FFF;
 }
@@ -48,7 +48,7 @@
   width: 48px;
 }
 
-// /* 背景顏色 */
+/* 背景顏色 */
 .bg-aa0601 {
   background-color: #AA0601;
 }
@@ -65,18 +65,11 @@
   margin: 0 32px;
 }
 
-@media (max-width: 992px) {
-  .footer-icon-mx {
-    margin: 0 16px;
-  }
-}
-
 @media (max-width: 768px) {
-  .fs-16-768px{
+  .fs-16-768px {
     font-size: 16px;
   }
-
   .mb-8-768px{
     margin-bottom: 8px;
   }
-} 
+}
