--- a/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
+++ b/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="footer-py bg-aa0601">
   <div class="container">
     <div class="d-flex justify-content-between">
-      <div class="d-flex flex-column justify-content-start align-self-start mb-24px">
+      <div class="d-flex flex-column justify-content-start align-self-start">
         <ul class="p-0 mb-0 d-md-flex align-items-center py-12-768px d-md-block d-none">
           <li class="me-48px d-flex align-items-center"><a class="color-fff" href="#">首頁</a></li>
           <li class="me-48px d-flex align-items-center"><a class="color-fff" href="#">系列鏡框</a></li>
@@ -11,13 +11,13 @@
         </ul>
         <div>
           <div class="mb-8px d-flex align-items-center">
-            <span class="fs-48px me-16px material-symbols-outlined color-fff">
+            <span class="fs-48px fs-16-768px me-16px material-symbols-outlined color-fff">
               call
             </span>
             <a href="tel:0988888888" class="color-fff fs-36px fs-16-768px">0800-000-000</a>
           </div>
           <div class="d-flex align-items-center">
-            <span class="fs-48px me-16px material-symbols-outlined color-fff">
+            <span class="fs-48px fs-16-768px me-16px material-symbols-outlined color-fff">
               mail
             </span>
             <a href="mailto:glasses@business.com" class="color-fff fs-36px fs-16-768px">glasses@business.com</a>
@@ -25,12 +25,12 @@
         </div>
       </div>
       <div>
-        <img class="w-48px" src="../image/ic-social-fb.png" alt="FB">
-        <img class="footer-icon-mx w-48px" src="../image/ic_social_ig.png" alt="IG">
-        <img class="w-48px" src="../image/ic_social_line.png" alt="LINE">
+        <img class="w-48px w-24px" src="../image/ic-social-fb.png" alt="FB">
+        <img class="footer-icon-mx w-48px w-24px" src="../image/ic_social_ig.png" alt="IG">
+        <img class="w-48px w-24px" src="../image/ic_social_line.png" alt="LINE">
       </div>
     </div>
-    <hr class="my-32px">
+    <hr class="my-32px my-md-24px">
     <div class="d-flex justify-content-between flex-md-row flex-column">
       <span class="color-fff fs-16-768px mb-8-768px">Copyright © 2020 Glasses.All rights reserved.</span>
       <div>
