--- a/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
@@ -1,4 +1,4 @@
 @import '../base/_reset.scss';
 @import './layout/_header.scss';
-
+@import './layout/_footer.scss';
 @import '../scss/pages/faq.scss';
