--- a/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/all.scss
@@ -1,4 +1,5 @@
 @import '../base/_reset.scss';
 @import './layout/_header.scss';
 @import './layout/_footer.scss';
-@import '../scss/pages/faq.scss';
+@import '../scss/pages/_index.scss';
+@import '../scss/pages/_faq.scss';
