--- a/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
+++ b/hw4_vite/web-layout-training-vite-main/layout/footer.ejs
@@ -25,9 +25,9 @@
         </div>
       </div>
       <div>
-        <img class="w-48px w-24px" src="../image/ic-social-fb.png" alt="FB">
-        <img class="footer-icon-mx w-48px w-24px" src="../image/ic_social_ig.png" alt="IG">
-        <img class="w-48px w-24px" src="../image/ic_social_line.png" alt="LINE">
+        <img class="icon-size" src="../image/ic-social-fb.png" alt="FB">
+        <img class="footer-icon-mx icon-size" src="../image/ic_social_ig.png" alt="IG">
+        <img class="icon-size" src="../image/ic_social_line.png" alt="LINE">
       </div>
     </div>
     <hr class="my-32px my-md-24px">
