--- a/hw4_vite/web-layout-training-vite-main/assets/scss/pages/_index.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/pages/_index.scss
@@ -1,14 +1,14 @@
-// @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-// /* google-icon */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+/* google-icon */
 
-// .material-symbols-outlined {
-//   font-variation-settings:
-//     'FILL' 0,
-//     'wght' 400,
-//     'GRAD' 0,
-//     'opsz' 48
-// }
+.material-symbols-outlined {
+  font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 48
+}
 
 // /* 字型 */
 .roboto-regular {
@@ -37,31 +37,31 @@
 
 // /* 字型結束 */
 
-// *,
-// *::before,
-// *::after {
-//   margin: 0;
-//   padding: 0;
-//   box-sizing: border-box;
-//   line-height: 1.5;
-// }
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  line-height: 1.5;
+}
 
-// a {
-//   text-decoration: none;
-//   color: inherit;
-// }
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
-// img {
-//   max-width: 100%;
-//   height: auto;
-//   vertical-align: middle;
-// }
+img {
+  max-width: 100%;
+  height: auto;
+  vertical-align: middle;
+}
 
-// input,
-// textarea {
-//   border: 1px solid #000000;
-//   padding: 6px 12px;
-// }
+input,
+textarea {
+  border: 1px solid #000000;
+  padding: 6px 12px;
+}
 
 // /* 字體大小 */
 .fs-14px {
@@ -146,7 +146,7 @@
 
 .header-bg {
   padding: 296px 0 341px 0;
-  background: url('../image/home-header.png') no-repeat center / cover;
+  background: url('../../../image/home-header.png') no-repeat center / cover;
 }
 
 .buy-now {
@@ -159,7 +159,7 @@
 }
 
 .section-index-bg {
-  background: url('../image/index-bg.png') no-repeat center / cover;
+  background: url('../../../image/index-bg.png') no-repeat center / cover;
 }
 
 .double-a,
@@ -196,13 +196,13 @@
   }
 
   .section-index-bg {
-    background: url('../image/index-bg-md.png') no-repeat center / cover;
+    background: url('../../../image/index-bg-md.png') no-repeat center / cover;
   }
 }
 
 @media (max-width: 768px) {
   .header-bg {
-    background: url('../image/home-header-sm.png') no-repeat center / cover;
+    background: url('../../../image/home-header-sm.png') no-repeat center / cover;
   }
   .fs-16-768px{
     font-size: 16px;
