--- a/hw4_vite/web-layout-training-vite-main/assets/scss/pages/_index.scss
+++ b/hw4_vite/web-layout-training-vite-main/assets/scss/pages/_index.scss
@@ -146,7 +146,7 @@ textarea {
 
 .header-bg {
   padding: 296px 0 341px 0;
-  background: url('../../../image/home-header.png') no-repeat center / cover;
+  background: url('/image/home-header.png') no-repeat center / cover;
 }
 
 .buy-now {
@@ -159,7 +159,7 @@ textarea {
 }
 
 .section-index-bg {
-  background: url('../../../image/index-bg.png') no-repeat center / cover;
+  background: url('/image/index-bg.png') no-repeat center / cover;
 }
 
 .double-a,
@@ -196,13 +196,13 @@ textarea {
   }
 
   .section-index-bg {
-    background: url('../../../image/index-bg-md.png') no-repeat center / cover;
+    background: url('/image/index-bg-md.png') no-repeat center / cover;
   }
 }
 
 @media (max-width: 768px) {
   .header-bg {
-    background: url('../../../image/home-header-sm.png') no-repeat center / cover;
+    background: url('/image/home-header-sm.png') no-repeat center / cover;
   }
   .fs-16-768px{
     font-size: 16px;
