--- a/hw5/assets/scss/utils/_font-style.scss
+++ b/hw5/assets/scss/utils/_font-style.scss
@@ -28,11 +28,11 @@
   font-style: normal;
 }
 
-// .lato-bold {
-//   font-family: "Lato", sans-serif;
-//   font-weight: 700;
-//   font-style: normal;
-// }
+.lato-bold {
+  font-family: "Lato", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
 
 // .lato-black {
 //   font-family: "Lato", sans-serif;
