--- a/hw5/assets/scss/pages/_index.scss
+++ b/hw5/assets/scss/pages/_index.scss
@@ -18,6 +18,14 @@
       padding: 32px;
     }
 
+    .local-page-border {
+      border-left: 4px solid #198754;
+
+      .admin-color {
+        color: #198754;
+      }
+    }
+
     .auther {
       padding: 32px;
 
